almost done with portfolio section

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="all,follow">
+  <!-- CSS reset-->
+  <link rel="stylesheet" href="css/reset.css">
   <!-- Bootstrap CSS-->
   <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
   <!-- Font Awesome CSS-->
@@ -18,14 +20,14 @@
   <link rel="stylesheet" href="vendor/lightbox2/css/lightbox.min.css">
   <!-- theme stylesheet-->
   <link rel="stylesheet" href="css/style.default.css" id="theme-stylesheet">
-  <!-- Custom stylesheet - for your changes-->
+  <!-- custom stylesheet-->
   <link rel="stylesheet" href="css/custom.css">
-  <!-- Favicon-->
-  <link rel="shortcut icon" href="img/favicon.png">
+  <!-- favicon-->
+  <link rel="shortcut icon" href="img/favicon.jpg">
   <!-- Tweaks for older IEs-->
-  <!--[if lt IE 9]>
+  [if lt IE 9]>
         <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
+        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>![endif]
 </head>
 
 <body>
@@ -68,21 +70,10 @@
         <div class="col-lg-6">
           <h2 class="heading">About me</h2>
           <p class="lead">Connecting people through tech.</p>
-          <p>I’m an enthusiastic full-stack web developer with a background in clinical psychology. Connection,
-            collaboration, and creativity
-            are all important to me; they drew me to study human behavior and helped me discover a passion for
-            programming along
-            the way. The intersection of these two areas of interest, psych and tech, is where my strength as a
-            developer lies.
-            My deep behavioral knowledge helps me conceptualize how people interact with each other and with
-            technology. With this
-            person-oriented mindset and my technical abilities, I love to create beautiful, meaningful applications
-            that are equally
-            intuitive to users and developers.</p>
 
-          <p>I’m always eager to collaborate and stretch my skills. Do you have a project or position for which you
-            think I could be
-            a good fit? Let’s connect!</p>
+          <p>I’m an enthusiastic full-stack web developer with a background in clinical psychology. Connection, collaboration, and creativity are all important to me; they drew me to study human behavior and helped me discover a passion for programming along the way. The intersection of these two areas of interest, psych and tech, is where my strength as a developer lies. My deep behavioral knowledge helps me conceptualize how people interact with each other and with technology. With this person-oriented mindset and my technical abilities, I love to create beautiful, meaningful applications that are equally intuitive to users and developers.</p>
+
+          <p>I’m always eager to collaborate and stretch my skills. Do you have a project or position for which you think I could be a good fit? Let’s connect!</p>
 
           <p class="social">
             <a href="https://github.com/reneegrinnell" title="GitHub" class="github"><i class="fa fa-github"></i></a>
@@ -102,51 +93,55 @@
     <div class="container">
       <div class="row services">
         <div class="col-lg-12">
-          <h2 class="heading">Services</h2>
+          <h2 class="heading">Recent Projects</h2>
           <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-6">
               <div class="box">
-                <div class="icon"><i class="fa fa-desktop"></i></div>
-                <h4>Webdesign</h4>
-                <p>Fifth abundantly made Give sixth hath. Cattle creature i be don't them.</p>
+                <div class="icon"><i class="fa fa-smile-o"></i></div>
+                <h4>Moodster</h4>
+                <p>A full-stack mobile web app to track and visualize users' moods</p>
               </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-6">
               <div class="box">
-                <div class="icon"><i class="fa fa-print"></i></div>
-                <h4>Print</h4>
-                <p>Advantage old had otherwise sincerity dependent additions. It in adapted natural.</p>
-              </div>
-            </div>
-            <div class="col-md-4">
-              <div class="box">
-                <div class="icon"><i class="fa fa-globe"></i></div>
-                <h4>SEO and SEM</h4>
-                <p>Am terminated it excellence invitation projection as. She graceful shy. </p>
+                <div class="icon"><i class="fa fa-bolt"></i></div>
+                <h4>Friend Finder</h4>
+                <p>Full-stack Harry Potter matching app to help you find your wizard bff</p>
               </div>
             </div>
           </div>
 
           <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-6">
               <div class="box">
-                <div class="icon"><i class="fa fa-desktop"></i></div>
-                <h4>Webdesign</h4>
-                <p>Fifth abundantly made Give sixth hath. Cattle creature i be don't them.</p>
+                <div class="icon"><i class="fa fa-music"></i></div>
+                <h4>JAMR</h4>
+                <p>Tone.js and Firebase collaborative keyboard of win & awesome</p>
               </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-6">
               <div class="box">
-                <div class="icon"><i class="fa fa-print"></i></div>
-                <h4>Print</h4>
-                <p>Advantage old had otherwise sincerity dependent additions. It in adapted natural.</p>
+                <div class="icon"><i class="fa fa-credit-card"></i></div>
+                <h4>Bamazon Storefront</h4>
+                <p>Node CLI "store" of fabulous Star Trek Voyager goodies with MySQL backend</p>
               </div>
             </div>
-            <div class="col-md-4">
+          </div>
+
+          <div class="row">
+           
+            <div class="col-md-6">
               <div class="box">
-                <div class="icon"><i class="fa fa-globe"></i></div>
-                <h4>SEO and SEM</h4>
-                <p>Am terminated it excellence invitation projection as. She graceful shy. </p>
+                <div class="icon"><i class="fa fa-male"></i></div>
+                <h4>Ron Swanson Gif Heaven</h4>
+                <p>Dynamically populates with user-selected Ron Swanson-related gifs from GIPHY's API</p>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="box">
+                <div class="icon"><i class="fa fa-diamond"></i></div>
+                <h4>Crystal Collector</h4>
+                <p>A blingy, interactive jQuery guessing and memory game - now with 76% more math!</p>
               </div>
             </div>
           </div>
