need to fix sizing issue with last child in project section, otherwise looking good

--- a/index.html
+++ b/index.html
@@ -24,10 +24,6 @@
   <link rel="stylesheet" href="css/custom.css">
   <!-- favicon-->
   <link rel="shortcut icon" href="img/favicon.jpg">
-  <!-- Tweaks for older IEs-->
-  [if lt IE 9]>
-  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>![endif]
 </head>
 
 <body>
@@ -103,17 +99,18 @@
           <div class="row">
             <div class="col-md-6">
               <div class="box">
-                <a href="img/portfolio-1.jpg" data-lightbox="image-1" data-title="Some footer information" class="has-border"><img
-                    src="img/portfolio-1.jpg" alt="image" class="img-fluid"></a>
+                <a href="img/portfolio-1.jpg" data-lightbox="image-1" data-title="Moodster" class="has-border"><img src="img/portfolio-1.jpg"
+                    alt="image" class="img-fluid"></a>
                 <h4><a href="https://github.com/reneegrinnell/moodster"><i class="icon fa fa-smile-o"></i></a> <a href="https://moodster.herokuapp.com/">Moodster</a></h4>
                 <p>A full-stack mobile web app to track and visualize users' moods</p>
               </div>
             </div>
             <div class="col-md-6">
               <div class="box">
-                <a href="img/portfolio-1.jpg" data-lightbox="image-1" data-title="Some footer information" class="has-border"><img
-                    src="img/portfolio-1.jpg" alt="image" class="img-fluid"></a>
-                <h4><a href="https://github.com/reneegrinnell/friendFinder"><i class="icon fa fa-bolt"></i></a> <a href="https://arcane-tundra-94976.herokuapp.com/">Friend Finder</a></h4>
+                <a href="img/portfolio-2.jpg" data-lightbox="image-2" data-title="Friend Finder" class="has-border"><img
+                    src="img/portfolio-2.jpg" alt="image" class="img-fluid"></a>
+                <h4><a href="https://github.com/reneegrinnell/friendFinder"><i class="icon fa fa-bolt"></i></a> <a href="https://arcane-tundra-94976.herokuapp.com/">Friend
+                    Finder</a></h4>
                 <p>Full-stack Harry Potter matching app to help you find your wizard bff</p>
               </div>
             </div>
@@ -121,17 +118,19 @@
           <div class="row">
             <div class="col-md-6">
               <div class="box">
-                <a href="img/portfolio-1.jpg" data-lightbox="image-1" data-title="Some footer information" class="has-border"><img
-                    src="img/portfolio-1.jpg" alt="image" class="img-fluid"></a>
-                <h4><a href="https://github.com/reneegrinnell/GroupProject1-JAMR"><i class="icon fa fa-music"></i></a> <a href="https://reneegrinnell.github.io/GroupProject1-JAMR/">JAMR</a></h4>
+                <a href="img/portfolio-3.jpg" data-lightbox="image-3" data-title="JAMR" class="has-border"><img src="img/portfolio-3.jpg"
+                    alt="image" class="img-fluid"></a>
+                <h4><a href="https://github.com/reneegrinnell/GroupProject1-JAMR"><i class="icon fa fa-music"></i></a>
+                  <a href="https://reneegrinnell.github.io/GroupProject1-JAMR/">JAMR</a></h4>
                 <p>Tone.js and Firebase collaborative keyboard of win & awesome</p>
               </div>
             </div>
             <div class="col-md-6">
               <div class="box">
-                <a href="img/portfolio-1.jpg" data-lightbox="image-1" data-title="Some footer information" class="has-border"><img
-                    src="img/portfolio-1.jpg" alt="image" class="img-fluid"></a>
-                <h4><a href="https://github.com/reneegrinnell/BamazonStorefront"><i class="icon fa fa-credit-card"></i></a> <a href="https://github.com/reneegrinnell/BamazonStorefront">Bamazon Storefront</a></h4>
+                <a href="img/portfolio-4.jpg" data-lightbox="image-4" data-title="Bamazon" class="has-border"><img src="img/portfolio-4.jpg"
+                    alt="image" class="img-fluid"></a>
+                <h4><a href="https://github.com/reneegrinnell/BamazonStorefront"><i class="icon fa fa-credit-card"></i></a>
+                  <a href="https://github.com/reneegrinnell/BamazonStorefront">Bamazon Storefront</a></h4>
                 <p>Node CLI "store" of fabulous Star Trek Voyager goodies with MySQL backend</p>
               </div>
             </div>
@@ -139,111 +138,37 @@
           <div class="row">
             <div class="col-md-6">
               <div class="box">
-                <a href="img/portfolio-1.jpg" data-lightbox="image-1" data-title="Some footer information" class="has-border"><img
-                    src="img/portfolio-1.jpg" alt="image" class="img-fluid"></a>
-                <h4><a href="https://github.com/reneegrinnell/GifTastic"><i class="icon fa fa-male"></i></a> <a href="https://reneegrinnell.github.io/GifTastic/">Ron Swanson Gif Party</a></h4>
+                <a href="img/portfolio-5.jpg" data-lightbox="image-5" data-title="GifTastic" class="has-border"><img
+                    src="img/portfolio-5.jpg" alt="image" class="img-fluid"></a>
+                <h4><a href="https://github.com/reneegrinnell/GifTastic"><i class="icon fa fa-male"></i></a> <a href="https://reneegrinnell.github.io/GifTastic/">Ron
+                    Swanson Gif Party</a></h4>
                 <p>Dynamically populates with user-selected Ron Swanson-related gifs from GIPHY's API</p>
               </div>
             </div>
             <div class="col-md-6">
               <div class="box">
-                <a href="img/portfolio-1.jpg" data-lightbox="image-1" data-title="Some footer information" class="has-border"><img
-                    src="img/portfolio-1.jpg" alt="image" class="img-fluid"></a>
-                <h4><a href="https://github.com/reneegrinnell/Crystal-Collector"><i class="icon fa fa-diamond"></i></a> <a href="https://reneegrinnell.github.io/Crystal-Collector/">Crystal Collector</a></h4>
+                <a href="img/portfolio-6.jpg" data-lightbox="image-6" data-title="Crystal Collector" class="has-border"><img
+                    src="img/portfolio-6.jpg" alt="image" class="img-fluid"></a>
+                <h4><a href="https://github.com/reneegrinnell/Crystal-Collector"><i class="icon fa fa-diamond"></i></a>
+                  <a href="https://reneegrinnell.github.io/Crystal-Collector/">Crystal Collector</a></h4>
                 <p>A blingy, interactive jQuery guessing and memory game - now with 76% more math!</p>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
   </section>
   <!-- portfolio end-->
-  <!-- Portfolio / gallery-->
-  <section id="portfolio" class="gallery">
-    <div class="container clearfix">
-      <div class="row">
-        <div class="col-lg-12">
-          <div class="row">
-            <div class="col-md-12 col-lg-8">
-              <h2 class="heading">Portfolio</h2>
-              <p>Put your portfolio or gallery images here for example. Able an hope of body. Any nay shyness article
-                matters own removal nothing his forming. Gay own additions education satisfied the perpetual. If he
-                cause manor happy. Without farther she exposed saw man led. Along on happy could cease green oh. </p>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-md-4">
-              <div class="box"><a href="img/portfolio-1.jpg" data-lightbox="image-1" data-title="Some footer information"
-                  class="has-border"><img src="img/portfolio-1.jpg" alt="image" class="img-fluid"></a></div>
-            </div>
-            <div class="col-md-4">
-              <div class="box"><a href="img/portfolio-2.jpg" data-lightbox="image-1" data-title="Some footer information"
-                  class="has-border"><img src="img/portfolio-2.jpg" alt="image" class="img-fluid"></a></div>
-            </div>
-            <div class="col-md-4">
-              <div class="box"><a href="img/portfolio-3.jpg" data-lightbox="image-1" data-title="Some footer information"
-                  class="has-border"><img src="img/portfolio-3.jpg" alt="image" class="img-fluid"></a></div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-md-4">
-              <div class="box"><a href="img/portfolio-4.jpg" data-lightbox="image-1" data-title="Some footer information"
-                  class="has-border"><img src="img/portfolio-4.jpg" alt="image" class="img-fluid"></a></div>
-            </div>
-            <div class="col-md-4">
-              <div class="box"><a href="img/portfolio-5.jpg" data-lightbox="image-1" data-title="Some footer information"
-                  class="has-border"><img src="img/portfolio-5.jpg" alt="image" class="img-fluid"></a></div>
-            </div>
-            <div class="col-md-4">
-              <div class="box"><a href="img/portfolio-6.jpg" data-lightbox="image-1" data-title="Some footer information"
-                  class="has-border"><img src="img/portfolio-6.jpg" alt="image" class="img-fluid"></a></div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-md-4">
-              <div class="box"><a href="img/portfolio-7.jpg" data-lightbox="image-1" data-title="Some footer information"
-                  class="has-border"><img src="img/portfolio-7.jpg" alt="image" class="img-fluid"></a></div>
-            </div>
-            <div class="col-md-4">
-              <div class="box"><a href="img/portfolio-8.jpg" data-lightbox="image-1" data-title="Some footer information"
-                  class="has-border"><img src="img/portfolio-8.jpg" alt="image" class="img-fluid"></a></div>
-            </div>
-            <div class="col-md-4">
-              <div class="box"><a href="img/portfolio-9.jpg" data-lightbox="image-1" data-title="Some footer information"
-                  class="has-border"><img src="img/portfolio-9.jpg" alt="image" class="img-fluid"></a></div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- Portfolio / gallery end-->
-  <!-- text page-->
-  <!-- <section id="text" class="text-page section-inverse">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12">
-            <h2 class="heading">Text page</h2>
-            <div class="row">
-              <div class="col-md-6">
-                <p>Able an hope of body. Any nay shyness article matters own removal nothing his forming. Gay own additions education satisfied the perpetual. If he cause manor happy. Without farther she exposed saw man led. Along on happy could cease green oh. </p>
-                <p>Betrayed cheerful declared end and. Questions we additions is extremely incommode. Next half add call them eat face. Age lived smile six defer bed their few. Had admitting concluded too behaviour him she. Of death to or to being other. </p>
-              </div>
-              <div class="col-md-6">
-                <p>Effects present letters inquiry no an removed or friends. Desire behind latter me though in. Supposing shameless am he engrossed up additions. My possible peculiar together to. Desire so better am cannot he up before points. Remember mistaken opinions it pleasure of debating. Court front maids forty if aware their at. Chicken use are pressed removed. </p>
-                <p>Saw yet kindness too replying whatever marianne. Old sentiments resolution admiration unaffected its mrs literature. Behaviour new set existence dashwoods. It satisfied to mr commanded consisted disposing engrossed. Tall snug do of till on easy. Form not calm new fail. </p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section> -->
-  <!-- text page end-->
   <footer style="background-color: #111;">
     <div class="container">
       <div class="row copyright">
         <div class="col-md-12">
+          <p class="social2">
+            <a href="https://github.com/reneegrinnell" title="GitHub" class="github"><i class="fa fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/reneegrinnell/" title="LinkedIn" class="linkedin"><i class="fa fa-linkedin"></i></a>
+            <a href="mailto:renee.grinnell@gmail.com" title="Email" class="email"><i class="fa fa-envelope"></i></a>
+            <a href="#intro" title="Top" class="linkedin"><i class="fa fa-chevron-up"></i></a>
+          </p>
           <p class="credit mb-md-0 text-center">Another dandy site made with <i class="fa fa-heart"></i> by Renée
             Grinnell<br>&copy; 2019</p>
         </div>
