all good except issue with last-child sizing in portfolio section, navbar justification

--- a/index.html
+++ b/index.html
@@ -20,8 +20,6 @@
   <link rel="stylesheet" href="vendor/lightbox2/css/lightbox.min.css">
   <!-- theme stylesheet-->
   <link rel="stylesheet" href="css/style.default.css" id="theme-stylesheet">
-  <!-- custom stylesheet-->
-  <link rel="stylesheet" href="css/custom.css">
   <!-- favicon-->
   <link rel="shortcut icon" href="img/favicon.jpg">
 </head>
@@ -63,7 +61,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6">
-          <h2 class="heading">About me</h2>
+          <h2 class="heading">About Me</h2>
           <p class="lead">Connecting people through tech.</p>
 
           <p>I’m an enthusiastic full-stack web developer with a background in clinical psychology. Connection,
@@ -79,7 +77,7 @@
 
           <p class="social">
             <a href="https://github.com/reneegrinnell" title="GitHub" class="github"><i class="fa fa-github"></i></a>
-            <a href="https://www.linkedin.com/in/reneegrinnell/" title="LinkedIn" class="linkedin"><i class="fa fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/reneegrinnell/" title="linkedin" class="linkedin"><i class="fa fa-linkedin"></i></a>
             <a href="mailto:renee.grinnell@gmail.com" title="Email" class="email"><i class="fa fa-envelope"></i></a>
           </p>
         </div>
