looking great, ready to submit

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <!-- navbar-->
   <header class="header">
     <nav class="navbar navbar-expand-lg">
-      <div class="container"><a href="#intro" class="navbar-brand link-scroll"></a>
+      <div class="container"><a href="#intro" class="navbar-brand link-scroll"><img src="img/logo.png" alt="Handwritten signature logo" class="img-fluid"></a>
         <button type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
           aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler navbar-toggler-right"><i class="fa fa-bars"></i></button>
         <div id="navbarSupportedContent" class="collapse navbar-collapse">
@@ -78,6 +78,7 @@
           <p class="social">
             <a href="https://github.com/reneegrinnell" title="GitHub" class="github"><i class="fa fa-github"></i></a>
             <a href="https://www.linkedin.com/in/reneegrinnell/" title="linkedin" class="linkedin"><i class="fa fa-linkedin"></i></a>
+            <!-- <a href="https://www.ravelry.com/projects/reneeneighhh?set=&columns=&view=thumbnail&page=&sort=status%20completed_%20status_changed_&search=" title="Ravelry" class="github"><i class="fa fa-ravelry"></i></a> -->
             <a href="mailto:renee.grinnell@gmail.com" title="Email" class="email"><i class="fa fa-envelope"></i></a>
           </p>
         </div>
@@ -97,16 +98,14 @@
           <div class="row">
             <div class="col-md-6">
               <div class="box">
-                <a href="img/portfolio-1.jpg" data-lightbox="image-1" data-title="Moodster" class="has-border"><img src="img/portfolio-1.jpg"
-                    alt="image" class="img-fluid"></a>
+                <img src="img/portfolio-1.jpg" alt="happy young boy in baseball cap" class="img-fluid">
                 <h4><a href="https://github.com/reneegrinnell/moodster"><i class="icon fa fa-smile-o"></i></a> <a href="https://moodster.herokuapp.com/">Moodster</a></h4>
                 <p>A full-stack mobile web app to track and visualize users' moods</p>
               </div>
             </div>
             <div class="col-md-6">
               <div class="box">
-                <a href="img/portfolio-2.jpg" data-lightbox="image-2" data-title="Friend Finder" class="has-border"><img
-                    src="img/portfolio-2.jpg" alt="image" class="img-fluid"></a>
+                <img src="img/portfolio-2.jpg" alt="round harry potter glasses" class="img-fluid">
                 <h4><a href="https://github.com/reneegrinnell/friendFinder"><i class="icon fa fa-bolt"></i></a> <a href="https://arcane-tundra-94976.herokuapp.com/">Friend
                     Finder</a></h4>
                 <p>Full-stack Harry Potter matching app to help you find your wizard bff</p>
@@ -116,8 +115,7 @@
           <div class="row">
             <div class="col-md-6">
               <div class="box">
-                <a href="img/portfolio-3.jpg" data-lightbox="image-3" data-title="JAMR" class="has-border"><img src="img/portfolio-3.jpg"
-                    alt="image" class="img-fluid"></a>
+                <img src="img/portfolio-3.jpg" alt="person playing electric guitar" class="img-fluid">
                 <h4><a href="https://github.com/reneegrinnell/GroupProject1-JAMR"><i class="icon fa fa-music"></i></a>
                   <a href="https://reneegrinnell.github.io/GroupProject1-JAMR/">JAMR</a></h4>
                 <p>Tone.js and Firebase collaborative keyboard of win & awesome</p>
@@ -125,8 +123,7 @@
             </div>
             <div class="col-md-6">
               <div class="box">
-                <a href="img/portfolio-4.jpg" data-lightbox="image-4" data-title="Bamazon" class="has-border"><img src="img/portfolio-4.jpg"
-                    alt="image" class="img-fluid"></a>
+                <img src="img/portfolio-4.jpg" alt="american paper money" class="img-fluid">
                 <h4><a href="https://github.com/reneegrinnell/BamazonStorefront"><i class="icon fa fa-credit-card"></i></a>
                   <a href="https://github.com/reneegrinnell/BamazonStorefront">Bamazon Storefront</a></h4>
                 <p>Node CLI "store" of fabulous Star Trek Voyager goodies with MySQL backend</p>
@@ -136,8 +133,7 @@
           <div class="row">
             <div class="col-md-6">
               <div class="box">
-                <a href="img/portfolio-5.jpg" data-lightbox="image-5" data-title="GifTastic" class="has-border"><img
-                    src="img/portfolio-5.jpg" alt="image" class="img-fluid"></a>
+                <img src="img/portfolio-5.jpg" alt="bacon sizzling in a cast-iron skillet" class="img-fluid">
                 <h4><a href="https://github.com/reneegrinnell/GifTastic"><i class="icon fa fa-male"></i></a> <a href="https://reneegrinnell.github.io/GifTastic/">Ron
                     Swanson Gif Party</a></h4>
                 <p>Dynamically populates with user-selected Ron Swanson-related gifs from GIPHY's API</p>
@@ -145,8 +141,7 @@
             </div>
             <div class="col-md-6">
               <div class="box">
-                <a href="img/portfolio-6.jpg" data-lightbox="image-6" data-title="Crystal Collector" class="has-border"><img
-                    src="img/portfolio-6.jpg" alt="image" class="img-fluid"></a>
+                <img src="img/portfolio-6.jpg" alt="black and white crystals" class="img-fluid">
                 <h4><a href="https://github.com/reneegrinnell/Crystal-Collector"><i class="icon fa fa-diamond"></i></a>
                   <a href="https://reneegrinnell.github.io/Crystal-Collector/">Crystal Collector</a></h4>
                 <p>A blingy, interactive jQuery guessing and memory game - now with 76% more math!</p>
