--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div class="container clearfix">
         <div class="row">
           <div class="col-lg-8 col-md-12 mx-auto">
-            <p class="italic">Hello, World!</p>
+            <p class="italic">Hello, world!</p>
             <h1>Renée Grinnell, full-stack web developer at your service.</h1>
             <p class="italic">Scroll down to learn more about me and my work.</p>
           </div>
