--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           </p>
         </div>
         <div class="col-lg-5 mx-auto">
-          <p><img class=headshot src="img/rmgHeadshot.jpg" alt="Black and white headshot of Renée Grinnell, full-stack web developer"></p>
+          <p><img class=headshot src="img/headshot2bw.jpg" alt="Black and white headshot of Renée Grinnell, full-stack web developer"></p>
         </div>
       </div>
     </div>
