--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
           <p class="social">
             <a href="https://github.com/reneegrinnell" title="GitHub" class="github"><i class="fa fa-github"></i></a>
             <a href="https://www.linkedin.com/in/reneegrinnell/" title="linkedin" class="linkedin"><i class="fa fa-linkedin"></i></a>
-            <a href="https://www.ravelry.com/projects/reneeneighhh?set=&columns=&view=thumbnail&page=&sort=status%20completed_%20status_changed_&search=" title="Ravelry" class="github"><i class="fa fa-ravelry"></i></a>
-            <a href="mailto:renee.grinnell@gmail.com" title="Email" class="email"><i class="fa fa-envelope"></i></a>
             <a href="https://codepen.io/reneeneigh/pens/public/" title="CodePen" class="github"><i class="fa fa-codepen"></i></a>
+            <a href="https://www.ravelry.com/projects/reneeneighhh?set=&columns=&view=thumbnail&page=&sort=status%20completed_%20status_changed_&search=" title="Ravelry" class="linkedin"><i class="fa fa-ravelry"></i></a>
+            <a href="mailto:renee.grinnell@gmail.com" title="Email" class="github"><i class="fa fa-envelope"></i></a>
           </p>
         </div>
         <div class="col-lg-5 mx-auto">
