--- a/index.html
+++ b/index.html
@@ -163,10 +163,12 @@
             <a href="https://codepen.io/reneeneigh/pens/public/" title="CodePen" class="github"><i class="fa fa-codepen"></i></a>
             <a href="https://www.ravelry.com/projects/reneeneighhh?set=&columns=&view=thumbnail&page=&sort=status%20completed_%20status_changed_&search=" title="Ravelry" class="linkedin"><i class="fa fa-ravelry"></i></a>
             <a href="mailto:renee.grinnell@gmail.com" title="Email" class="github"><i class="fa fa-envelope"></i></a>
-            <a href="#intro" title="Top" class="linkedin"><i class="fa fa-chevron-up"></i></a>
           </p>
           <p class="credit mb-md-0 text-center">Another dandy site made with <i class="fa fa-heart"></i> by Renée
             Grinnell<br>&copy; 2019</p>
+          <p class="social2">
+            <a href="#intro" title="Top" class="linkedin"><i class="fa fa-chevron-up"></i></a>
+          </p>
         </div>
       </div>
     </div>
