--- a/index.html
+++ b/index.html
@@ -64,16 +64,9 @@
           <h2 class="heading">About Me</h2>
           <p class="lead">Connecting people through tech.</p>
 
-          <p>I’m an enthusiastic full-stack web developer with a background in clinical psychology. Connection,
-            collaboration, and creativity are all important to me; they drew me to study human behavior and helped me
-            discover a passion for programming along the way. The intersection of these two areas of interest, psych
-            and tech, is where my strength as a developer lies. My deep behavioral knowledge helps me conceptualize how
-            people interact with each other and with technology. With this person-oriented mindset and my technical
-            abilities, I love to create beautiful, meaningful applications that are equally intuitive to users and
-            developers.</p>
+          <p>I am a creative and collaborative full-stack web developer with a background in clinical psychology, transitioning careers into web development. A recent graduate of the University of Richmond’s intensive 24-week web development boot camp certificate program, I’m proficient in JavaScript, the MERN (Mongo-Express-React-Node) stack, and numerous other technologies. I am a proven leader, team player, independent learner, and self-starter with the ability to meet deadlines and drive results. With a person-oriented mindset that drew me to study human behavior and my newly honed technical abilities, I enjoy creating beautiful and meaningful applications that are equally intuitive to users and developers. </p>
 
-          <p>I’m always eager to collaborate and stretch my skills. Do you have a project or position for which you
-            think I could be a good fit? Let’s connect!</p>
+          <p>I’m always eager to collaborate and stretch my skills. Do you have a project or position for which you think I could be a good fit? Let’s connect!</p>
 
           <p class="social">
             <a href="https://github.com/reneegrinnell" title="GitHub" class="github"><i class="fa fa-github"></i></a>
